# geoslice

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  SOURCES.txt  nodeids  pyproject.toml  setup.py  top_level.txt
.github/workflows/: ci.yml  publish.yml
include/geoslice/: geo_transform.hpp  geoslice.hpp  mmap_reader.hpp  window_cache.hpp
python/geoslice/: __init__.py  core.py  drone.py
python/geoslice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: bindings.cpp  geo_transform.cpp  mmap_reader.cpp  window_cache.cpp
tests/: test_benchmark.py  test_geo_transform.cpp  test_geoslice.py  test_mmap_reader.cpp  test_window_cache.cpp
